--- a/projects/rilke-ui/src/lib/components/list/list-toolbar/list-toolbar.component.scss
+++ b/projects/rilke-ui/src/lib/components/list/list-toolbar/list-toolbar.component.scss
@@ -18,7 +18,7 @@ ril-list-toolbar {
 
 		.quantity {
 			margin-left: 1rem;
-			color: $success-color;
+			color: var(--success-color);
 		}
 
 		.text {
