--- a/projects/rilke-ui/src/lib/components/range-slider/range-slider.component.scss
+++ b/projects/rilke-ui/src/lib/components/range-slider/range-slider.component.scss
@@ -15,7 +15,7 @@ ril-range-slider {
 	}
 
 	.mat-accent .mat-slider-thumb-label-text {
-		color: $success-color;
+		color: var(--success-color);
 	}
 
 	.mat-slider-track-background {
