--- a/projects/rilke-ui/src/lib/components/switcher/switcher.component.scss
+++ b/projects/rilke-ui/src/lib/components/switcher/switcher.component.scss
@@ -71,7 +71,7 @@ ril-switcher {
 	&.checked {
 		.ril-switcher-wrap {
 			.ril-switcher-handle {
-				background: $success-color;
+				background: var(--success-color);
 
 				.check-detector {
 					background: var(--800);
