--- a/projects/rilke-ui/src/lib/components/text-area/text-area.component.scss
+++ b/projects/rilke-ui/src/lib/components/text-area/text-area.component.scss
@@ -78,7 +78,7 @@ ril-text-area {
 	.has-error & {
 		.ril-textarea-wrap {
 			.textarea-control {
-				border: 1px solid $error-color;
+				border: 1px solid var(--error-color);
 			}
 		}
 	}
