--- a/projects/rilke-ui/src/assets/style/_structure.scss
+++ b/projects/rilke-ui/src/assets/style/_structure.scss
@@ -24,5 +24,5 @@ $m-lg: $base-size * 1.5;
 $m-xl: $base-size * 2;
 
 // Shadow
-$s-sm: 0 0.125rem 0.25rem rgba(0, 0, 0, 7.5%) !important;
+$s-sm: rgba(60, 64, 67, 0.3) 0 1px 2px 0, rgba(60, 64, 67, 0.15) 0 1px 3px 1px !important;
 $s-md: 0 0.5rem 1rem rgba(0, 0, 0, 15%) !important;
