--- a/projects/rilke-ui/src/lib/components/input/input.component.scss
+++ b/projects/rilke-ui/src/lib/components/input/input.component.scss
@@ -95,7 +95,7 @@ ril-input {
 	&.ng-invalid.ng-touched,
 	.has-error & {
 		.ril-input-wrap {
-			border: 1px solid $error-color;
+			border: 1px solid var(--error-color);
 		}
 	}
 
